# netcup-cli

./: .gitignore  API_FINDINGS.md  PLAN.md  README.md  pyproject.toml
.context/: domains.txt  netcup-api-docs.txt
debug/: api_responses.jsonl
src/netcup_cli/: __init__.py  main.py
src/netcup_cli/api/: __init__.py  client.py  dns.py
src/netcup_cli/config/: __init__.py  manager.py
src/netcup_cli/utils/: __init__.py  debug.py  exceptions.py  helpers.py
